# lore-bot

./: .gitignore  README.md  lorebot-spec.md
.github/workflows/: deploy.yml
bot/: .env.example  README.md  pyproject.toml
bot/lorebot/: __init__.py  config.py  discord_io.py  engine.py  fuzzy.py  gitops.py  harvest.py  llm.py  main.py  pending.py  preview.py  refrender.py  repl.py  search.py  siteurls.py
bot/lorebot/content/: __init__.py  entries.py  glossary.py  index.py  slugify.py  timeline.py
bot/tests/: conftest.py  fakes.py  test_config.py  test_dedup.py  test_dispatch.py  test_engine.py  test_entries.py  test_gitops.py  test_glossary_timeline.py  test_harvest.py  test_index.py  test_pending.py  test_preview.py  test_refrender.py  test_search.py  test_siteurls.py  test_slugify.py
bot/tests/fixtures/content/glossary/: glossary.yaml
bot/tests/fixtures/content/lore/locations/: kells-hollow.md  the-shattered-reach.md
bot/tests/fixtures/content/lore/npcs/: captain-ferocious.md
bot/tests/fixtures/content/timeline/: events.yaml
content/characters/: mara-quillon.md
content/glossary/: glossary.yaml
content/lore/concepts/: the-sundering.md
content/lore/factions/: house-veldrane.md
content/lore/npcs/: captain-powderkeg.md  lieutenant-commander-powderkeg.md
content/maps/: shattered-reach-map.md
content/timeline/: events.yaml
site/: astro.config.mjs  package-lock.json  package.json
site/src/: content.config.ts
site/src/components/: Referenced.astro  SlugRef.astro
site/src/layouts/: Base.astro
site/src/lib/: backlinks.ts  inline-links.mjs  (+2 more)
(+12 files in other folders)
