[project]
name = "lorebot"
version = "0.1.0"
description = "LoreBot — the Sundered Isles Chronicle Discord authoring bot (Phase 2)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "discord.py>=2.4,<3",
    "anthropic>=0.40",
    "python-frontmatter>=1.1",
    "PyYAML>=6.0",
    "rapidfuzz>=3.9",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["lorebot*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
